Front > UDocumentation : Scrollbar fix

--- a/public/css/_udocumentation.scss
+++ b/public/css/_udocumentation.scss
@@ -24,6 +24,7 @@
             width: 100%;
             overflow: auto;
             margin: 0;
+            scrollbar-width: thin;
         }
     }
 }
